# diplom_f

./: .gitignore  README.md
Certs/: cert_devices.pem  cert_registries.pem  key_devices.pem  key_registries.pem
diplom-common/: crc8.c  crc8.h  dht11.c  dht11.h  di.c  di.h  leds.c  leds.h  mqtt_esp.c  mqtt_esp.h  photosensor.c  photosensor.h  uart_data.h  uart_esp.c  uart_esp.h  wifi_esp.c  wifi_esp.h
diplom-esp32/: .project  CMakeLists.txt  sdkconfig  sdkconfig.old
diplom-esp32-mqtt-adapter/: .project  CMakeLists.txt  sdkconfig  sdkconfig.old
diplom-esp32-mqtt-adapter/main/: .cproject  .project  CMakeLists.txt  diplom-esp32-mqtt-adapter.c  target.h
diplom-esp32/main/: .cproject  CMakeLists.txt  diplom-esp32.c  target.h
diplom-stm32/: .cproject  .mxproject  .project  CMakeLists.txt  diplom-stm32.ioc
diplom-stm32/Core/Inc/: main.h  stm32f7xx_hal_conf.h
diplom-stm32/Core/Src/: main.c
diplom-stm32f4/: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  diplom-stm32f4.ioc
diplom-stm32f4/Core/Inc/: FreeRTOSConfig.h  main.h  target.h
diplom-stm32f4/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
